--- a/views/callback.hbs
+++ b/views/callback.hbs
@@ -2,7 +2,7 @@
 <html>
 <head>
   <script>
-    window.opener && window.opener.postMessage('{{{response}}}', '*');
+    window.opener && window.opener.postMessage({{{response}}}, '*');
     window.close();
   </script>
 </head>
